<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:padding="8dp">

		<TextView
		    android:layout_width="fill_parent"
			android:layout_height="50dp" 
			android:textColor="#FFF" 
			android:gravity="center"
			android:text="帮助" android:textSize="25dp" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:textColor="#FFF"
			android:text="@string/help_main_string" android:textSize="18dp" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="30dp" 
			android:background="@color/help_bg"
			android:textColor="#FFF" 
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			android:text="@string/menu_task" 
			android:textSize="15dp"
			 />
		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:textColor="#FFF"
			android:text="@string/help_task" android:textSize="18dp" 
			android:paddingTop="5dp" android:paddingBottom="5dp"/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="30dp" 
			android:background="@color/help_bg"
			android:textColor="#FFF" 
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			android:text="@string/menu_goal" 
			android:textSize="15dp" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:textColor="#FFF"
			android:text="@string/help_goal" android:textSize="18dp"
			android:paddingTop="5dp" android:paddingBottom="5dp" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="30dp" 
			android:background="@color/help_bg"
			android:textColor="#FFF" 
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			android:text="@string/menu_tips" 
			android:textSize="15dp" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:textColor="#FFF"
			android:text="@string/help_tips" android:textSize="18dp"
			android:paddingTop="5dp" android:paddingBottom="5dp" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="30dp" 
			android:background="@color/help_bg"
			android:textColor="#FFF" 
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			android:text="@string/menu_history" 
			android:textSize="15dp" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:textColor="#FFF"
			android:text="@string/help_history" android:textSize="18dp"
			android:paddingTop="5dp" android:paddingBottom="5dp" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="30dp" 
			android:background="@color/help_bg"
			android:textColor="#FFF" 
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			android:text="@string/menu_setup" 
			android:textSize="15dp" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:textColor="#FFF"
			android:text="@string/help_setup" android:textSize="18dp"
			android:paddingTop="5dp" android:paddingBottom="5dp" />
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="30dp" 
			android:background="@color/help_bg"
			android:textColor="#FFF" 
			android:gravity="center_vertical"
			android:layout_gravity="center_vertical"
			android:text="@string/menu_widget" 
			android:textSize="15dp"
			 />
		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:textColor="#FFF"
			android:text="@string/help_widget" android:textSize="18dp"
			android:paddingTop="5dp" android:paddingBottom="5dp" />
		</LinearLayout>
</ScrollView>